Issue #1226 - ensure that the correct implementation classes are used
Signed-off-by: John T.E. Timm <johntimm@us.ibm.com>